--- a/src/main/webapp/hr/hr_report_ph_date.xhtml
+++ b/src/main/webapp/hr/hr_report_ph_date.xhtml
@@ -55,6 +55,13 @@
                             </p:outputLabel>
                         </p:column>
 
+                        <p:column headerText="Id">
+                            <f:facet name="header">
+                                <h:outputLabel value="Id"/>
+                            </f:facet>
+                            <p:outputLabel value="#{ph.id}" >
+                            </p:outputLabel>
+                        </p:column>
                         <p:column headerText="Hollyday Name">
                             <f:facet name="header">
                                 <h:outputLabel value="Hollyday Name"/>
