--- a/src/main/webapp/channel/channel_shedule.xhtml
+++ b/src/main/webapp/channel/channel_shedule.xhtml
@@ -157,6 +157,12 @@
                         <p:inputText autocomplete="off" value="#{sheduleController.current.reserveName}"/>
                         <p:outputLabel value="Maximum Raw Number"></p:outputLabel>
                         <p:inputText autocomplete="off" value="#{sheduleController.current.maxTableRows}" disabled="#{sheduleController.current.id ne null and !webUserController.hasPrivilege('ChannellingChannelShedulMaxRowNo')}"></p:inputText>
+                        <p:outputLabel value="creater"></p:outputLabel>
+                        <p:outputLabel value="#{sheduleController.current.creater.webUserPerson.name}"></p:outputLabel>
+                        <p:outputLabel value="created At"></p:outputLabel>
+                        <p:outputLabel value="#{sheduleController.current.createdAt}">
+                            <f:convertDateTime pattern="yyyy-MM-dd hh:mm:ss a" />
+                        </p:outputLabel>
 
                     </p:panelGrid>
                     <br/>
