--- a/src/main/webapp/opd_service_subcategory.xhtml
+++ b/src/main/webapp/opd_service_subcategory.xhtml
@@ -50,6 +50,8 @@
                                 <h:panelGrid id="gpDetailText" columns="2">
                                     <h:outputText id="lblName" value="Name" ></h:outputText>
                                     <h:inputText autocomplete="off" id="txtName" value="#{serviceSubCategoryController.current.name}"  ></h:inputText>
+                                    <h:outputText id="lblNameIn" value="Income Name" ></h:outputText>
+                                    <h:inputText autocomplete="off" id="txtNameIn" value="#{serviceSubCategoryController.current.description}"  ></h:inputText>
 
                                 </h:panelGrid>
                                 <h:panelGrid id="gpDetailButtons" columns="2">
