--- a/src/main/webapp/qbReports/report_qb_day_income_with_out_professional.xhtml
+++ b/src/main/webapp/qbReports/report_qb_day_income_with_out_professional.xhtml
@@ -17,17 +17,27 @@
             <p:panel>
                 <f:facet name="header" >
                     <h:outputLabel value="Book Keeping Summary Without Pro (DAY)"  styleClass="noPrintButton" />
-                    <h:panelGrid columns="2"  styleClass="noPrintButton">
+                    <h:panelGrid columns="2"  styleClass="noPrintButton" id="pan">
                         <h:outputLabel value="Report"/>
                         <p:selectOneMenu value="#{quickBookReportController.report}" >
                             <f:selectItem itemLabel="Select Report"/>
                             <f:selectItem itemLabel="Daily Return" itemValue="1"/>
                             <f:selectItem itemLabel="Pharmacy GRN and Purchase Bills" itemValue="2"/>
                             <f:selectItem itemLabel="Store GRN and Purchase Bills" itemValue="3"/>
-                            <f:ajax event="change" execute="@this" render="tbl" listener="#{quickBookReportController.listnerReportNameChange}" />
+                            <f:selectItem itemLabel="Inward Income" itemValue="4"/>
+                            <f:selectItem itemLabel="OPD Credit" itemValue="5"/>
+                            <f:ajax event="change" execute="@this" render="tbl pan" listener="#{quickBookReportController.listnerReportNameChange}" />
                         </p:selectOneMenu>
-                        <h:outputLabel value="Date"/>
+                        <h:outputLabel value="BHT Type" rendered="#{quickBookReportController.report eq '4'}" />
+                        <p:selectOneMenu   id="cmbBhtType" value="#{quickBookReportController.reportKeyWord.paymentMethod}" rendered="#{quickBookReportController.report eq '4'}" >
+                            <f:selectItem itemLabel="All BHT Types" />                           
+                            <f:selectItems value="#{enumController.paymentMethodForAdmission}" />
+                        </p:selectOneMenu>
+                        <h:outputLabel value="Date" rendered="#{quickBookReportController.report ne '4'}"/>
+                        <h:outputLabel value="From Date" rendered="#{quickBookReportController.report eq '4'}"/>
                         <p:calendar id="frmDate" value="#{quickBookReportController.fromDate}" navigator="true"  pattern="dd MM yyyy" />
+                        <h:outputLabel value="To Date" rendered="#{quickBookReportController.report eq '4'}"/>
+                        <p:calendar id="toDate" value="#{quickBookReportController.toDate}" navigator="true"  pattern="dd MM yyyy" rendered="#{quickBookReportController.report eq '4'}"/>
                         <h:outputLabel value="Select Institution"/>
                         <p:autoComplete completeMethod="#{institutionController.completeCompany}" required="true" 
                                         forceSelection="true"
@@ -197,7 +207,7 @@
                         <p:cellEditor rendered="#{qbf.editAmount}">  
                             <f:facet name="output"> 
                                 <p:outputLabel value="#{qbf.amount}" rendered="#{qbf.amount ne 0.0}">
-                                    <f:convertNumber pattern="#,##0.00" />
+                                    <f:convertNumber pattern="0.00" />
                                 </p:outputLabel>
                                 <p:outputLabel value="" rendered="#{qbf.amount eq 0.0}"/>
                             </f:facet>  
@@ -206,7 +216,7 @@
                             </f:facet>  
                         </p:cellEditor>  
                         <p:outputLabel value="#{qbf.amount}" rendered="#{qbf.amount ne 0.0}">
-                            <f:convertNumber pattern="#,##0.00" />
+                            <f:convertNumber pattern="0.00" />
                         </p:outputLabel>
                         <p:outputLabel value="" rendered="#{qbf.amount eq 0.0}"/>
                     </p:column>
