Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/bill_all_view.xhtml
+++ b/src/main/webapp/bill_all_view.xhtml
@@ -541,7 +541,7 @@
                             </p:panel>
                         </p:panel>
                     </p:panel>
-                    <h:panelGroup id="gpBillPreview" >
+                    <h:panelGroup id="gpBillPreview" styleClass="noBorder">
 
                         <p:panel rendered="#{billSearch.billSearch.billType eq 'PaymentBill'}">
                             <p:commandButton value="Print" styleClass="noPrintButton" ajax="false" action="#" >
