--- a/src/main/webapp/resources/cashier/credit_letter.xhtml
+++ b/src/main/webapp/resources/cashier/credit_letter.xhtml
@@ -309,7 +309,7 @@
                     <tr>
                         <td>
                             <!--<h:outputLabel value="#{sessionController.loggedUser.staff.speciality.name},"/>-->
-                            <h:outputLabel value="Accountanat,"/>
+                            <h:outputLabel value="Accountant,"/>
                         </td>
                         <td></td>
                         <td></td>
