Ward Pharmacy Request Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/ward/ward_pharmacy_bht_issue_request_bill.xhtml
+++ b/src/main/webapp/ward/ward_pharmacy_bht_issue_request_bill.xhtml
@@ -177,6 +177,17 @@
                                                                     </f:facet>  
                                                                 </p:cellEditor> 
                                                             </p:column>
+                                                            <p:column headerText="Descreption">
+                                                                <p:cellEditor>  
+                                                                    <f:facet name="output">  
+                                                                        <h:outputText value="#{bi.descreption}" >
+                                                                        </h:outputText>
+                                                                    </f:facet>  
+                                                                    <f:facet name="input">  
+                                                                        <p:inputText autocomplete="off" id="ipTblDis" value="#{bi.descreption}" style="width:96%"/>  
+                                                                    </f:facet>  
+                                                                </p:cellEditor> 
+                                                            </p:column>
 
                                                             <p:column style="width:6%">  
                                                                 <p:rowEditor />  
