--- a/src/main/webapp/ward/ward_pharmacy_bht_issue.xhtml
+++ b/src/main/webapp/ward/ward_pharmacy_bht_issue.xhtml
@@ -31,6 +31,11 @@
                         <h:outputText id="item" value="#{bItm.item.name}" >                                   
                         </h:outputText>
                     </p:column>  
+                    
+                    <p:column headerText="Descreption" style="width: 50px!important;"  >                     
+                        <h:outputText id="dis" value="#{bItm.descreption}" >                                   
+                        </h:outputText>
+                    </p:column>  
 
                     <p:column headerText="Batch No"  style="width:50px!important; text-align: right;">  
                         <h:outputLabel value="#{bItm.pharmaceuticalBillItem.stock.itemBatch.batchNo}"/>                        
